minor spacing error and flou fix

--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -240,7 +240,7 @@
 }
 .bubble3 {
   background-image: url(../img/bubble3.png);
-  padding: 12rem 4rem 12rem 8rem;
+  padding: 5rem 4rem 5rem 8rem;
 }
 
 .info-title {
